--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,6 @@ layout: default
 
 {% if site.disqus.shortname %}
 <div class="comment container">
-  <div id="disqus_thread">
-  </div>
+  <div id="disqus_thread"></div>
 </div>
 {% endif %}
