--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   {% seo %}
   {% feed_meta %}
-  {% if page.mp3 %}
+  {% if page.music_mp3 %}
   <audio autoplay loop>
     <source src="{{ page.music_mp3 }}" />
   </audio>
