--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   {% seo %}
-  {% feed_meta %}
-  {% if page.music_mp3 %}7878
+  {% feed_meta %}{{variable | inspect}}
+  {% if page.music_mp3 %}
   <audio autoplay loop>
     <source src="{{ page.music_mp3 }}" />
   </audio>
