update font-style: italic

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,9 @@
 ---
 layout: compress
 ---
-<!DOCTYPE html>
-<html>
+
+<!doctype html>
+<html lang="en">
   {% include head.html %}
   <body>
     {% include sidebar.html %}
