--- a/_sass/05-post.sass
+++ b/_sass/05-post.sass
@@ -80,7 +80,7 @@ h1 + h2, h2 + h3, h3 + h4, h4 + h5, h5 + h6
   blockquote
     position: relative
     margin: 0 0 $post-paragraph-spacing 2em
-    font-style: italic
+    // font-style: italic
     &:before
       @extend %icon
       @extend %icon-quotes-left
