--- a/_sass/04-sidebar.sass
+++ b/_sass/04-sidebar.sass
@@ -187,10 +187,12 @@
     animation: joggle .6s linear
 
 .post-link
-  padding: 0 15px 0 32px;
-  white-space: nowrap;
-  text-decoration: none;
-  text-overflow: ellipsis;
-  color: #55606F;
-  overflow: hidden;
-  outline: none;
+  padding: 0 15px 0 32px
+  font-size: $toc-font-size
+  line-height: $toc-line-height
+  white-space: nowrap
+  text-decoration: none
+  text-overflow: ellipsis
+  color: #55606F
+  overflow: hidden
+  outline: none
