--- a/_sass/04-sidebar.sass
+++ b/_sass/04-sidebar.sass
@@ -186,6 +186,15 @@
   &:hover:before
     animation: joggle .6s linear
 
+.post-list
+  list-style:none
+
+.post-meta
+  float: left
+
+.post-list h2
+  float: left;
+  margin: 10px auto;
 .post-link
   padding: 0 15px 0 32px
   font-size: $toc-font-size
@@ -196,3 +205,5 @@
   color: #55606F
   overflow: hidden
   outline: none
+
+  
