--- a/_sass/04-sidebar.sass
+++ b/_sass/04-sidebar.sass
@@ -193,8 +193,8 @@
   float: left
 
 .post-list h2
-  float: left;
-  margin: 10px auto;
+  float: left
+  margin: 10px auto
 .post-link
   padding: 0 15px 0 32px
   font-size: $toc-font-size
