--- a/_sass/04-sidebar.sass
+++ b/_sass/04-sidebar.sass
@@ -191,10 +191,12 @@
 
 .post-meta
   float: left
+  margin:19px auto
 
 .post-list h2
   float: left
   margin: 10px auto
+
 .post-link
   padding: 0 15px 0 32px
   font-size: $toc-font-size
