--- a/_sass/04-sidebar.sass
+++ b/_sass/04-sidebar.sass
@@ -187,7 +187,6 @@
     animation: joggle .6s linear
 
 .post-list
-  clear: both
   list-style: none
 
 .post-list li
@@ -212,4 +211,5 @@
   overflow: hidden
   outline: none
 
-  
+.rss-subscribe
+  clear: both
