--- a/_sass/blog/_layout.scss
+++ b/_sass/blog/_layout.scss
@@ -139,11 +139,11 @@
   margin-left: 0;
   list-style: none;
 
-  > li {
+  li {
     margin-bottom: $spacing-unit * 1.5;
   }
 
-  > li > h2 {
+  li h2 {
     margin-top: 0rem;
     margin-bottom: 0.4rem;
   }
